--- a/project_source/app/src/main/res/layout/login.xml
+++ b/project_source/app/src/main/res/layout/login.xml
@@ -13,7 +13,7 @@
 
 
         <ImageButton
-            android:id="@+id/backBtn"
+            android:id="@+id/close"
             android:layout_width="38dp"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
