--- a/project_source/app/src/main/res/layout/jogging_success.xml
+++ b/project_source/app/src/main/res/layout/jogging_success.xml
@@ -75,7 +75,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/jog_timesum_title"
+                    android:id="@+id/jog_result_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
@@ -84,7 +84,7 @@
                     android:textSize="24sp" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/jog_result_distance_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
@@ -104,7 +104,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/jog_timesum_title"
+                    android:id="@+id/jog_result_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="8dp"
@@ -113,7 +113,7 @@
                     android:textSize="24sp" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/jog_result_distance_value"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
