--- a/project_source/app/src/main/res/layout/jogginglog_item.xml
+++ b/project_source/app/src/main/res/layout/jogginglog_item.xml
@@ -35,7 +35,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/jog_result_distance_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
