--- a/project_source/app/src/main/res/values/colors.xml
+++ b/project_source/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="red">#FF0000</color>
+    <color name="gray">#B4B4B4</color>
+    <color name="white">#FFFFFF</color>
 </resources>
